--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" href="/portfolio/css/animate.css">
-    <link rel="stylesheet" href="/portfolio/css/style.css">
+        <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Juarez Morais</title>
 </head>
 
